# LibMS1

./: pyproject.toml
backend_old/: db.sqlite3
backend_old/backend/: settings.py  urls.py
backend_old/tables/: admin.py  models.py  serializers.py  views.py
backend_old/tables/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/constants/: index.js
